--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-spring": "^9.7.3"
