--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
+    "react-intersection-observer": "^9.8.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
     "react-spring": "^9.7.3"
